--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -9,16 +9,23 @@
     <style>
         body{
             height:100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
+            /*background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
             background-position:center center;
             background-repeat: no-repeat;
             background-size:cover;
+            background-attachment: fixed;*/
+
+            /*shorthand background
+            color > image> position> repeat> {size}. attachment*/
+
+            background: black url('imagens/wallpaper002.jpg') center center  fixed;
+            background-size:cover
             
         }
         main{
+            max-width:800px;
             background-color: white;
-            width:400px;
             padding:10px;
             margin:auto;
             border:1px solid black;
